k8s/infrastructure/configs/pihole.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.cglavin50.com`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
  tls:
    store:
      name: default
      namespace: kube-system
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-external
  namespace: pihole
  labels:
    app.kubernetes.io/name: pihole
    app.kubernetes.io/part-of: pihole
spec:
  type: LoadBalancer
  externalIPs:
    - 10.0.0.50
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
  selector:
    app: pihole
    release: pihole
